--- a/notifications.html
+++ b/notifications.html
@@ -25,17 +25,13 @@
         align-items: center;
         gap: 15px;
       }
-
       body.dark .notification-item {
         background: #2d2d2d;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
       }
-
       .notification-item:hover {
         transform: translateY(-2px);
         box-shadow: 0 4px 12px rgba(217, 70, 239, 0.2);
       }
-
       .notification-icon {
         width: 50px;
         height: 50px;
@@ -48,42 +44,25 @@
         font-size: 20px;
         flex-shrink: 0;
       }
-
       .notification-content {
         flex: 1;
       }
-
       .notification-name {
         font-size: 18px;
         font-weight: bold;
         color: #1e1e1e;
         margin-bottom: 5px;
       }
-
-      body.dark .notification-name {
-        color: #fff;
-      }
-
       .notification-details {
         font-size: 14px;
         color: #666;
         margin-bottom: 3px;
       }
-
-      body.dark .notification-details {
-        color: #aaa;
-      }
-
       .notification-time {
         font-size: 12px;
         color: #999;
         margin-top: 8px;
       }
-
-      body.dark .notification-time {
-        color: #888;
-      }
-
       .notification-badge-small {
         background: #d946ef;
         color: white;
@@ -92,7 +71,6 @@
         font-size: 11px;
         font-weight: bold;
       }
-
       .notifications-header {
         background: linear-gradient(135deg, #d946ef, #a855f7);
         padding: 30px;
@@ -101,68 +79,12 @@
         margin-bottom: 30px;
         box-shadow: 0 4px 12px rgba(217, 70, 239, 0.3);
       }
-
-      .notifications-header h2 {
-        margin: 0;
-        font-size: 28px;
-        display: flex;
-        align-items: center;
-        gap: 10px;
-      }
-
-      .notifications-header p {
-        margin: 10px 0 0 0;
-        opacity: 0.9;
-      }
-
-      .empty-state {
-        text-align: center;
-        padding: 60px 20px;
-        color: #999;
-      }
-
-      .empty-state i {
-        font-size: 64px;
-        margin-bottom: 20px;
-        opacity: 0.5;
-      }
-
-      .notifications-container {
-        max-width: 900px;
-        margin: 0 auto;
-      }
-
-      .search-filter {
-        margin-bottom: 20px;
-      }
-
-      .search-filter input {
-        width: 100%;
-        padding: 12px 20px;
-        border: 2px solid #e0e0e0;
-        border-radius: 8px;
-        font-size: 14px;
-        transition: border-color 0.3s ease;
-      }
-
-      body.dark .search-filter input {
-        background: #2d2d2d;
-        border-color: #444;
-        color: #fff;
-      }
-
-      .search-filter input:focus {
-        outline: none;
-        border-color: #d946ef;
-      }
-
       .time-filters {
         display: flex;
         gap: 10px;
         margin-bottom: 20px;
         flex-wrap: wrap;
       }
-
       .filter-btn {
         padding: 8px 14px;
         background: #f3e8ff;
@@ -173,26 +95,18 @@
         cursor: pointer;
         transition: all 0.3s ease;
       }
-
       .filter-btn:hover {
         background: #d946ef;
         color: white;
       }
-
       .filter-btn.reset {
         background: #e5e7eb;
         color: #374151;
-      }
-
-      .filter-btn.reset:hover {
-        background: #9ca3af;
-        color: white;
       }
     </style>
   </head>
 
   <body>
-    <!-- LOGIN SCREEN -->
     <div id="loginScreen">
       <div id="loginBox">
         <h2><i class="fas fa-lock"></i>تسجيل دخول المسؤول</h2>
@@ -204,11 +118,8 @@
     </div>
 
     <div class="container">
-      <!-- SIDEBAR -->
       <aside class="sidebar" id="sidebar">
-        <div class="logo">
-          <span>CONAN DASHBOARD</span>
-        </div>
+        <div class="logo"><span>CONAN DASHBOARD</span></div>
         <nav class="menu">
           <a href="dashboard.html"
             ><i class="fa-solid fa-gauge"></i> لوحة القيادة</a
@@ -226,7 +137,6 @@
         </nav>
       </aside>
 
-      <!-- MAIN CONTENT -->
       <main class="main-content" id="dashboardContent" style="display: none">
         <header class="header">
           <div class="header-left">
@@ -234,18 +144,6 @@
               <i class="fa-solid fa-bars"></i>
             </button>
             <h1>التنبيهات</h1>
-          </div>
-          <div class="header-right">
-            <div class="search-box">
-              <input type="text" placeholder="اكتب هنا..." />
-              <i class="fa-solid fa-magnifying-glass"></i>
-            </div>
-            <button class="icon-btn" id="themeToggle">
-              <i class="fa-regular fa-moon"></i>
-            </button>
-            <button class="icon-btn" onclick="logout()">
-              <i class="fa-solid fa-right-from-bracket"></i>
-            </button>
           </div>
         </header>
 
@@ -270,15 +168,6 @@
             </button>
           </div>
 
-          <div class="search-filter">
-            <input
-              type="text"
-              id="searchInput"
-              placeholder="🔍 ابحث عن اسم المريض أو الخدمة..."
-              onkeyup="filterNotifications()"
-            />
-          </div>
-
           <div id="notificationsList"></div>
         </div>
 
@@ -287,222 +176,116 @@
     </div>
 
     <script>
-      // ======= SUPABASE LOGIN =======
       const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
       const SUPABASE_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
       const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-      async function login() {
-        const email = document.getElementById("email").value.trim();
-        const password = document.getElementById("password").value.trim();
-
-        const { data } = await supabase
-          .from("admin_auth")
-          .select("*")
-          .eq("email", email)
-          .eq("password", password)
-          .maybeSingle();
-
-        if (data) {
-          document.getElementById("loginScreen").style.display = "none";
-          document.getElementById("dashboardContent").style.display = "block";
-          localStorage.setItem("clinic_logged_in", "true");
-          loadNotifications();
-        } else {
-          const msg = document.getElementById("errorMsg");
-          msg.style.display = "block";
-          msg.textContent = "بريد إلكتروني أو كلمة مرور غير صالحة";
-        }
-      }
-
-      function logout() {
-        localStorage.removeItem("clinic_logged_in");
-        document.getElementById("loginScreen").style.display = "flex";
-        document.getElementById("dashboardContent").style.display = "none";
-      }
-
-      if (localStorage.getItem("clinic_logged_in") === "true") {
-        document.getElementById("loginScreen").style.display = "none";
-        document.getElementById("dashboardContent").style.display = "block";
-      }
-
-      // ======= NOTIFICATIONS =======
       let allBookings = [];
       let filteredBookings = [];
 
       async function loadNotifications() {
         try {
-          console.log("Fetching /api/bookings ...");
           const res = await fetch("/api/bookings");
           const rawData = await res.json();
           allBookings = rawData.slice(1).reverse();
-          console.log("Loaded bookings:", allBookings.length, allBookings);
           filteredBookings = allBookings;
+          console.log("✅ Loaded bookings:", allBookings);
           renderNotifications();
-        } catch (error) {
-          console.error("Error loading notifications:", error);
+        } catch (err) {
+          console.error("❌ Error fetching:", err);
         }
       }
 
       function renderNotifications() {
         const container = document.getElementById("notificationsList");
-        if (!filteredBookings || filteredBookings.length === 0) {
-          container.innerHTML = `
-            <div class="empty-state">
+        if (filteredBookings.length === 0) {
+          container.innerHTML = `<div class="empty-state">
               <i class="fa-solid fa-bell-slash"></i>
               <h3>لا توجد إشعارات</h3>
-              <p>لم يتم العثور على أي حجوزات</p>
             </div>`;
           return;
         }
-
         container.innerHTML = filteredBookings
-          .map((booking) => {
-            const timeAgo = getTimeAgo(booking.timestamp);
-            return `
-              <div class="notification-item">
-                <div class="notification-icon"><i class="fa-solid fa-user-plus"></i></div>
-                <div class="notification-content">
-                  <div class="notification-name">${
-                    booking.name || "غير محدد"
-                  }</div>
-                  <div class="notification-details"><i class="fa-solid fa-phone"></i> ${
-                    booking.phone || "غير محدد"
-                  }</div>
-                  <div class="notification-details"><i class="fa-solid fa-stethoscope"></i> ${
-                    booking.service || "غير محدد"
-                  }</div>
-                  <div class="notification-details"><i class="fa-solid fa-calendar"></i> ${
-                    booking.appointment || "غير محدد"
-                  }</div>
-                  <div class="notification-time"><i class="fa-solid fa-clock"></i> ${timeAgo}</div>
-                </div>
-                <div><span class="notification-badge-small">جديد</span></div>
-              </div>`;
+          .map((b) => {
+            const timeAgo = getTimeAgo(b.time);
+            return `<div class="notification-item">
+              <div class="notification-icon"><i class="fa-solid fa-user-plus"></i></div>
+              <div class="notification-content">
+                <div class="notification-name">${b.name || "غير محدد"}</div>
+                <div class="notification-details"><i class="fa-solid fa-phone"></i> ${
+                  b.phone || "غير محدد"
+                }</div>
+                <div class="notification-details"><i class="fa-solid fa-stethoscope"></i> ${
+                  b.service || "غير محدد"
+                }</div>
+                <div class="notification-details"><i class="fa-solid fa-calendar"></i> ${
+                  b.appointment || "غير محدد"
+                }</div>
+                <div class="notification-time"><i class="fa-solid fa-clock"></i> ${timeAgo}</div>
+              </div>
+              <div><span class="notification-badge-small">جديد</span></div>
+            </div>`;
           })
           .join("");
       }
 
-      function getTimeAgo(timestamp) {
-        if (!timestamp) return "غير محدد";
+      function getTimeAgo(t) {
+        if (!t) return "غير محدد";
         const now = new Date();
-        const bookingDate = new Date(timestamp);
-        const diffMs = now - bookingDate;
-        const diffMins = Math.floor(diffMs / 60000);
-        const diffHours = Math.floor(diffMs / 3600000);
-        const diffDays = Math.floor(diffMs / 86400000);
-        if (diffMins < 1) return "الآن";
-        if (diffMins < 60) return `منذ ${diffMins} دقيقة`;
-        if (diffHours < 24) return `منذ ${diffHours} ساعة`;
-        if (diffDays < 7) return `منذ ${diffDays} يوم`;
-        return bookingDate.toLocaleDateString("ar-EG");
+        const d = new Date(t);
+        const diff = now - d;
+        const mins = Math.floor(diff / 60000);
+        const hrs = Math.floor(diff / 3600000);
+        const days = Math.floor(diff / 86400000);
+        if (mins < 1) return "الآن";
+        if (mins < 60) return `منذ ${mins} دقيقة`;
+        if (hrs < 24) return `منذ ${hrs} ساعة`;
+        if (days < 7) return `منذ ${days} يوم`;
+        return d.toLocaleDateString("ar-EG");
       }
 
-      // ======= SEARCH =======
-      function filterNotifications() {
-        const searchTerm = document
-          .getElementById("searchInput")
-          .value.toLowerCase();
-        if (searchTerm === "") {
-          filteredBookings = allBookings;
-          renderNotifications();
-          return;
-        }
-        filteredBookings = allBookings.filter(
-          (b) =>
-            (b.name && b.name.toLowerCase().includes(searchTerm)) ||
-            (b.service && b.service.toLowerCase().includes(searchTerm)) ||
-            (b.phone && b.phone.includes(searchTerm))
-        );
-        renderNotifications();
-      }
-
-      // ======= FIXED TIME FILTER (With Debugging) =======
+      // ✅ FIXED FILTER FUNCTION (using "time" not "timestamp")
       function filterByTime(period) {
-        console.log("Applying filter:", period);
+        console.log("🔍 Filter:", period);
         const now = new Date();
-        filteredBookings = allBookings.filter((booking) => {
-          if (!booking.timestamp) {
-            console.warn("Skipping no timestamp:", booking);
-            return false;
-          }
-
-          let raw = booking.timestamp;
+        filteredBookings = allBookings.filter((b) => {
+          if (!b.time) return false;
+          let raw = b.time;
           if (typeof raw === "string" && !raw.endsWith("Z")) raw += "Z";
           const date = new Date(raw);
-          if (isNaN(date.getTime())) {
-            console.warn("Invalid date:", booking.timestamp);
-            return false;
-          }
+          if (isNaN(date.getTime())) return false;
 
           const diffDays = (now - date) / (1000 * 60 * 60 * 24);
 
           if (period === "day") {
-            const sameDay =
-              date.getFullYear() === now.getFullYear() &&
+            return (
+              date.getDate() === now.getDate() &&
               date.getMonth() === now.getMonth() &&
-              date.getDate() === now.getDate();
-            console.log("Day match:", booking.name, sameDay);
-            return sameDay;
+              date.getFullYear() === now.getFullYear()
+            );
+          } else if (period === "week") {
+            return diffDays >= 0 && diffDays <= 7;
+          } else if (period === "month") {
+            return (
+              date.getMonth() === now.getMonth() &&
+              date.getFullYear() === now.getFullYear()
+            );
           }
-
-          if (period === "week") {
-            const withinWeek = diffDays >= 0 && diffDays <= 7;
-            console.log("Week match:", booking.name, withinWeek, diffDays);
-            return withinWeek;
-          }
-
-          if (period === "month") {
-            const sameMonth =
-              date.getFullYear() === now.getFullYear() &&
-              date.getMonth() === now.getMonth();
-            console.log("Month match:", booking.name, sameMonth);
-            return sameMonth;
-          }
-
           return true;
         });
 
-        console.log("Filtered bookings:", filteredBookings.length);
+        console.log("✅ Filtered count:", filteredBookings.length);
         renderNotifications();
       }
 
       function resetTimeFilter() {
         filteredBookings = allBookings;
-        console.log("Reset filter — showing all bookings");
         renderNotifications();
       }
 
-      // ======= THEME + MENU + REFRESH =======
-      const themeToggle = document.getElementById("themeToggle");
-      themeToggle.addEventListener("click", () => {
-        document.body.classList.toggle("dark");
-        const icon = themeToggle.querySelector("i");
-        if (document.body.classList.contains("dark")) {
-          icon.classList.replace("fa-moon", "fa-sun");
-          localStorage.setItem("clinic_theme", "dark");
-        } else {
-          icon.classList.replace("fa-sun", "fa-moon");
-          localStorage.setItem("clinic_theme", "light");
-        }
-      });
-
-      if (localStorage.getItem("clinic_theme") === "dark") {
-        document.body.classList.add("dark");
-        const icon = themeToggle.querySelector("i");
-        icon.classList.replace("fa-moon", "fa-sun");
-      }
-
-      document
-        .getElementById("menuToggle")
-        .addEventListener("click", () =>
-          document.getElementById("sidebar").classList.toggle("active")
-        );
-
       if (localStorage.getItem("clinic_logged_in") === "true") {
         loadNotifications();
-        setInterval(loadNotifications, 30000);
       }
     </script>
   </body>
