--- a/booking.html
+++ b/booking.html
@@ -53,7 +53,7 @@
             لوحة القيادة
           </a>
 
-          <a href="#">
+          <a href="notifications.html">
             <i class="fa-solid fa-bell"></i>
             التنبيهات
           </a>
