--- a/analytics.html
+++ b/analytics.html
@@ -31,7 +31,7 @@
             لوحة القيادة
           </a>
 
-          <a href="#">
+          <a href="notifications.html">
             <i class="fa-solid fa-bell"></i>
             التنبيهات
           </a>
