--- a/dashboard/booking.html
+++ b/dashboard/booking.html
@@ -43,7 +43,7 @@
   <body>
     <div class="container">
       <!-- SIDEBAR -->
-      <aside class="sidebar" id="sidebar">
+       <aside class="sidebar" id="sidebar">
         <div class="logo">
           <span>CONAN DASHBOARD</span>
         </div>
@@ -62,14 +62,20 @@
             <i class="fa-solid fa-rocket"></i>
             تحليلات
           </a>
+
           <a href="booking.html" class="active">
             <i class="fa-solid fa-table"></i>
             جدول الحجوزات
           </a>
 
-          <a href="#">
-            <i class="fa-solid fa-user"></i>
-            ارسال رسالة جماعية
+          <a href="offers.html" >
+            <i class="fa-solid fa-gift"></i>
+            إرسال العروض المخصصة
+          </a>
+
+          <a href="AIsettings.html">
+            <i class="fa-solid fa-robot"></i>
+            إعدادات الذكاء الاصطناعي
           </a>
         </nav>
       </aside>
