--- a/dashboard.html
+++ b/dashboard.html
@@ -100,6 +100,11 @@
             <i class="fa-solid fa-user"></i>
             ارسال رسالة جماعية
           </a>
+
+          <a href="AIsettings.html">
+            <i class="fa-solid fa-robot"></i>
+            إعدادات الذكاء الاصطناعي
+          </a>
         </nav>
       </aside>
 
