--- a/AIsettings.html
+++ b/AIsettings.html
@@ -339,13 +339,49 @@
       reminderToggle.checked =
         localStorage.getItem("reminderToggle") === "true";
 
-      // Save settings
-      document.getElementById("saveSettings").addEventListener("click", () => {
-        localStorage.setItem("reminderCount", reminderCount.value);
-        localStorage.setItem("reminderInterval", reminderInterval.value);
-        localStorage.setItem("reminderToggle", reminderToggle.checked);
-        alert("✅ تم حفظ الإعدادات بنجاح!");
-      });
+      // ======= SAVE SETTINGS + SEND WHATSAPP =======
+      document
+        .getElementById("saveSettings")
+        .addEventListener("click", async () => {
+          localStorage.setItem("reminderCount", reminderCount.value);
+          localStorage.setItem("reminderInterval", reminderInterval.value);
+          localStorage.setItem("reminderToggle", reminderToggle.checked);
+
+          alert("✅ تم حفظ الإعدادات بنجاح!");
+
+          // ✅ Only send WhatsApp message if reminders are ON
+          if (reminderToggle.checked) {
+            try {
+              const payload = {
+                name: "Smile Clinic",
+                phone: "962785050875",
+                service: "تذكير تلقائي",
+                appointment: "الآن",
+              };
+
+              const res = await fetch(
+                "https://whatsapp-test-rosy.vercel.app/sendWhatsApp",
+                {
+                  method: "POST",
+                  headers: { "Content-Type": "application/json" },
+                  body: JSON.stringify(payload),
+                }
+              );
+
+              const data = await res.json();
+              console.log("📬 WhatsApp Response:", data);
+
+              if (data.success) {
+                alert("📱 تم إرسال تذكير واتساب بنجاح!");
+              } else {
+                alert("⚠️ فشل إرسال رسالة واتساب. تحقق من الخادم.");
+              }
+            } catch (err) {
+              console.error("❌ WhatsApp Send Error:", err);
+              alert("🚨 حدث خطأ أثناء إرسال رسالة واتساب.");
+            }
+          }
+        });
     </script>
   </body>
 </html>
